Index updated, part 1: basics of FCS files created
This reverts commit 89cacc83b8ea88483ba0a0599e1fa6da1c59ce43.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,12 +2,15 @@ project:
   type: website
 
 website:
-  title: "FlowCytoverse-Workshop"
+  title: "Flow Cytometry Analysis using R"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - text: Workshop
+        menu:
+        - text: "Basics of working with FCS files"
+          href: vignettes/1_Import_fcs.html
 
 format:
   html:
